--- a/Build_Stk_news_files.ipynb
+++ b/Build_Stk_news_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import datetime"
@@ -23,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prgs_bar(dt0, idx, runs, scale=20):\n",
     "    import sys\n",
     "\n",
     "    sys.stdout.write('\\r'+str(idx+1) + '/'+str(runs) + ' ' +\n",
+    "                     (' ' if idx+1<runs else '') +\n",
     "                     \" Progress {:2.2%}\".format((idx+1) / runs) + ' |' +\n",
-    "                     ''.join(['=']*int(((idx+1) / runs)*scale)) + '>' +\n",
+    "                     ''.join(['=']*int(((idx+1) / runs)*scale)) + \n",
+    "                     ('>' if idx+1<runs else '') +\n",
     "                     ''.join(['-']*int(scale-int(((idx+1) / runs)*scale)-1)) +\n",
     "                     '|ETA: ' + str((runs-idx)*(datetime.datetime.now()-dt0)/(idx+1))[:4] + '/' +\n",
     "                     str((runs)*(datetime.datetime.now()-dt0)/(idx+1))[:4] + \n",
@@ -45,21 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "def add_to_file(new_dict,file_name):\n",
     "    exists = os.path.isfile(file_name)\n",
-    "    if type(new_dict) is list\n",
+    "    \n",
+    "    if type(new_dict) != list: new_dict = [new_dict]\n",
+    "    \n",
     "    if exists:\n",
     "        with open(file_name) as ff:\n",
     "            json_new = json.load(ff)['key'] \n",
-    "        json_new = json_new + [new_dict]\n",
+    "        json_new = json_new + new_dict\n",
     "    else:\n",
-    "        json_new = [new_dict]\n",
+    "        json_new = new_dict\n",
     "    \n",
     "    json_new2 ={'key':json_new}\n",
     "    \n",
@@ -74,7 +80,15 @@
     "    else:\n",
     "        json_new = []\n",
     "    \n",
-    "    return json_new"
+    "    return json_new\n",
+    "\n",
+    "def write_file(new_dict,file_name):\n",
+    "    if type(new_dict) != list: new_dict = [new_dict]\n",
+    "    \n",
+    "    json_new2 ={'key':new_dict}\n",
+    "    \n",
+    "    with open(file_name, 'w') as f:\n",
+    "        json.dump(json_new2, f, ensure_ascii=False)"
    ]
   },
   {
@@ -86,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +217,7 @@
        "4              https://en.wikipedia.org/wiki/Abiomed          0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +270,7 @@
        "91"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -382,13 +396,7 @@
       "63/63  Progress 100.00% |====================>|ETA: 0:00/0:01           Loaded: rss_crawl2019-04-12 19-47-31_entities.txt\n",
       "5000/5000  Progress 100.00% |====================>|ETA: 0:00/0:20           Loaded: rss_crawl2019-04-20 19-05-24_entities.txt\n",
       "10000/10000  Progress 100.00% |====================>|ETA: 0:00/0:48           Loaded: rss_crawl2019-03-29 0085612_entities.txt\n",
-      "4/4  Progress 100.00% |====================>|ETA: 0:00/0:00           Loaded: rss_crawl2019-04-05 13-09-32_entities.txt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4/4  Progress 100.00% |====================>|ETA: 0:00/0:00           Loaded: rss_crawl2019-04-05 13-09-32_entities.txt\n",
       "43/43  Progress 100.00% |====================>|ETA: 0:00/0:00           Loaded: rss_crawl2019-04-24 07-08-31_entities.txt\n",
       "350/350  Progress 100.00% |====================>|ETA: 0:00/0:01           Loaded: rss_crawl2019-04-03 1951442_entities.txt\n",
       "914/914  Progress 100.00% |====================>|ETA: 0:00/0:04           Loaded: rss_crawl2019-04-24 21-41-28_entities.txt\n",
@@ -419,8 +427,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "salience_threshold = 0.005\n",
     "path_store = './stk_news_list/'\n",
     "\n",
@@ -458,9 +464,126 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loaded: rss_crawl2019-04-09 00-24-58.063131_entities.txt\n",
+      "100/100  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-13 18-00-18_entities.txt\n",
+      "9786/10000   Progress 97.86% |===================>|ETA: 0:00/0:00           \n",
+      "Loaded: rss_crawl2019-04-25 23-00-26_entities.txt\n",
+      "8450/8450  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-05 13-09-32_entities.txt\n",
+      "43/43  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-05 22-30-16_entities.txt\n",
+      "294/294  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-12 16-23-53_entities.txt\n",
+      "3600/3600  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-04 231136018255_entities.txt\n",
+      "134/134  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-11 22-28-45_entities.txt\n",
+      "839/839  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-05 01550682044_entities.txt\n",
+      "63/63  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 183.490591_entities.txt\n",
+      "59/59  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 173708.153802_entities.txt\n",
+      "165/165  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-22 08-25-28_entities.txt\n",
+      "6800/6800  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-26 04-03-25_entities.txt\n",
+      "8477/8477  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-19 13-16-01_entities.txt\n",
+      "8800/8800  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-24 07-08-31_entities.txt\n",
+      "350/350  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-29 0085612_entities.txt\n",
+      "4/4  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 010027.315286_entities.txt\n",
+      "575/575  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 140722.746408_entities.txt\n",
+      "47/47  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-24 21-41-28_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-21 15-13-08_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-24 00-49-39_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-14 01-21-16_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-10 17-26-47_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-29 000445.054593_entities.txt\n",
+      "1018/1018  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-03 1951442_entities.txt\n",
+      "914/914  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-23 23-09-11_entities.txt\n",
+      "3000/3000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-29 00.947101_entities.txt\n",
+      "1250/1250  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-05 10-42-45_entities.txt\n",
+      "343/343  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-26 220209.918207_entities.txt\n",
+      "114/114  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 164055.644673_entities.txt\n",
+      "74/74  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-11 01-44-33_entities.txt\n",
+      "923/923  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 173830.805708_entities.txt\n",
+      "9/9  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-03-25 160644.577845_entities.txt\n",
+      "185/185  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-25 17-29-10_entities.txt\n",
+      "9400/9400  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-13 02-07-56_entities.txt\n",
+      "7000/7000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-21 14-08-57_entities.txt\n",
+      "1600/1600  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n",
+      "\n",
+      "Loaded: rss_crawl2019-04-11 13-25-22_entities.txt\n",
+      "10000/10000  Progress 100.00% |====================|ETA: 0:00/0:00           Saving...\n"
+     ]
+    }
+   ],
    "source": [
     "salience_threshold = 0.005\n",
     "path_store = './stk_news_list/'\n",
@@ -469,16 +592,25 @@
     "nr_hits = 0\n",
     "ttl_hits = 0\n",
     "\n",
-    "dict_idx={}\n",
-    "dict_idx.keys()=stk_kg_id\n",
-    "dict_hits={}\n",
-    "dict_hits.keys()=stk_kg_id\n",
+    "\n",
     "\n",
     "for file in list_files:\n",
+    "    # Open news file\n",
     "    with open(path+file) as ff:\n",
     "        json2 = json.load(ff)['key']\n",
-    "    print('Loaded: ' + file)\n",
+    "    print('\\nLoaded: ' + file)\n",
+    "    \n",
     "    dt0 = datetime.datetime.now()\n",
+    "    \n",
+    "    # Create empty dictionaries for indices and news per file\n",
+    "    # Index dictionary will be loaded with all existing indices\n",
+    "    dict_idx={}\n",
+    "    for stk in stk_ticks:\n",
+    "        idx_file = load_file(path_store+stk+'_idx.txt')\n",
+    "        if len(idx_file) > 0: dict_idx[stk] = idx_file\n",
+    "    dict_nws={}\n",
+    "    \n",
+    "    \n",
     "    for idx in range(len(json2)):\n",
     "        if len(json2[idx].get('entities',''))>0:\n",
     "            kg_ids_art=[json2[idx]['entities'][loop]['mid'] \n",
@@ -489,16 +621,44 @@
     "            for stk_kg_itrs in stk_news_intersect:\n",
     "                #print(stk_kg_itrs)\n",
     "                loc_in_list = stk_kg_id.index(stk_kg_itrs)\n",
-    "\n",
-    "                new_file_name = path_store+stk_ticks[loc_in_list]\n",
+    "                stk_ticker = stk_ticks[loc_in_list]\n",
     "                \n",
-    "                idx_file = load_file(new_file_name+'_idx.txt')\n",
-    "                if json2[idx]['id'] not in idx_file:\n",
-    "                    add_to_file(json2[idx],new_file_name+'.txt')\n",
-    "                    add_to_file(json2[idx]['id'],new_file_name+'_idx.txt')\n",
+    "\n",
+    "                if json2[idx]['id'] not in dict_idx.get(stk_ticker,[]):\n",
+    "                    dict_nws[stk_ticker]=dict_nws.get(stk_ticker,[]) + [json2[idx]]\n",
+    "                    dict_idx[stk_ticker]=dict_idx.get(stk_ticker,[]) + [json2[idx]['id']]\n",
+    "\n",
     "                nr_hits = nr_hits +1\n",
     "        prgs_bar(dt0, idx, len(json2), scale=20)\n",
-    "        ttl_hits = ttl_hits + 1"
+    "        ttl_hits = ttl_hits + 1\n",
+    "    \n",
+    "    # Save down updated files at the end of the round\n",
+    "    print('Saving...')\n",
+    "    for stk in stk_ticks:\n",
+    "        #assert(len(dict_idx.get(stk,[])) == len(dict_nws.get(stk,[])))\n",
+    "        if len(dict_nws.get(stk,[]))>0:\n",
+    "            add_to_file(dict_nws[stk],path_store+stk+'.txt')\n",
+    "            write_file(dict_idx[stk],path_store+stk+'_idx.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MMM.N'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stk"
    ]
   }
  ],
